# wxl-core

./: CMakeLists.txt  README.md  build.ps1
Patcher/: Patcher.cpp
docs/: WarcraftXL.cfg.example
scripts/: .gitignore
src/: Wraith.cpp
src/Core/: Hook.cpp  Hook.hpp  Logger.cpp  Logger.hpp  Mem.cpp  Mem.hpp
src/Engine/: Gx.hpp  Offsets.hpp  View.hpp
src/Features/D3D12/API/: Device.cpp  Device.hpp
src/Features/D3D12/Engine/: Capture.cpp  Capture.hpp
src/Features/D3D12/Proxy/: Proxy.cpp
src/Features/FDID/: Fdid.cpp  Fdid.hpp
src/Features/M2/: AlphaScope.cpp  M2.hpp  MD21.cpp  MD21.hpp  Modern.cpp  Modern.hpp
src/Features/Ribbon/: Ribbon.cpp  Ribbon.hpp
src/common/: Config.cpp  Config.hpp  Log.cpp
src/core/: Hook.cpp  Main.cpp
src/events/: Event.hpp
src/game/gx/: Gx.cpp  Gx.hpp
src/game/m2/: M2.hpp
src/game/world/: World.hpp
src/gpu/: Capture.cpp  Present.cpp
src/host/: Host.cpp  Profile.cpp  main.cpp
src/host/ipc/: Protocol.hpp  ShmServer.cpp  ShmServer.hpp
src/host/mpq/: MpqStore.cpp  MpqStore.hpp
src/offsets/engine/: Gx.hpp  Io.hpp  Sound.hpp
src/offsets/game/: M2.hpp  Unit.hpp  World.hpp
src/runtime/: AssetProfile.cpp  GameHooks.cpp  GameHooks.hpp  RenderHooks.cpp
src/runtime/storage/: ShmClient.cpp  StorageHook.cpp
src/structure/m2/: M2Format.hpp
